fix: update font sizes in Buttompageinfo component for better readability and standardize link text to uppercase

--- a/src/client/src/components/Buttompageinfo/Buttompageinfo.scss
+++ b/src/client/src/components/Buttompageinfo/Buttompageinfo.scss
@@ -81,7 +81,7 @@
         a {
           color: white;
           text-decoration: none;
-          font-size: 20px;
+          font-size: 15px;
           padding: 2px 12px;
           border: 1px solid white;
           border-radius: 15px;
